--- a/app/src/main/res/layout/content_test3.xml
+++ b/app/src/main/res/layout/content_test3.xml
@@ -7,5 +7,17 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.gouxinyue.myapplication.TestActivity3"
     tools:showIn="@layout/activity_test3">
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="293dp"
+        tools:layout_editor_absoluteY="0dp"
+        />
+    <com.example.gouxinyue.myapplication.MyView3
+        android:id="@+id/myview3xx"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
